[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/tiles/soundOn.png" type="Texture" id=1]
[ext_resource path="res://extras/Clickable.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/ui/SoundButton.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/button_click.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 48 )

[node name="SoundButton" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="."]
modulate = Color( 0.764706, 0.721569, 0.682353, 1 )
position = Vector2( 0, 48 )
scale = Vector2( 4, 4 )

[node name="Sprite" type="Sprite" parent="Node2D"]
texture = ExtResource( 1 )

[node name="Clickable" parent="Node2D" instance=ExtResource( 2 )]
position = Vector2( -8, -8 )

[node name="Area2D" type="Area2D" parent="Node2D"]
position = Vector2( -6, -6 )
scale = Vector2( 0.125, 0.125 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
position = Vector2( 48, 48 )
shape = SubResource( 1 )

[node name="AudioClick" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource( 4 )

[connection signal="click" from="Node2D/Clickable" to="." method="_on_Clickable_click"]
[connection signal="mouse_entered" from="Node2D/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/Area2D" to="." method="_on_Area2D_mouse_exited"]
